[package]
name = "bedrock-hematite-nbt"
description = "A Minecraft Bedrock compatible fork of hematite-nbt, published to support other crates. A full-featured library for working with Minecraft's Named Binary Tag (NBT) file format, including Serde support."
documentation = "https://docs.rs/hematite-nbt/"
repository = "https://github.com/PistonDevelopers/hematite_nbt"
readme = "README.md"
license = "MIT"
keywords = ["nbt", "minecraft", "bedrock", "serde", "serialization"]
version = "0.4.2"
authors = [
    "Aaron Jacobs <atheriel@gmail.com>",
    "Fenhl <fenhl@fenhl.net>",
    "Carlos Cobo <toqueteos@gmail.com>",
    "Daniël Louwrink @ocecaco",
    "Charles R. Portwood II <charlesportwoodii@erianna.com>"
]

[features]
default = ["serde"]

[lib]
name = "nbt"
path = "src/lib.rs"

[dependencies]
byteorder = "1.0.0"
cesu8 = "1.1.0"
flate2 = "0.2"
serde = { version = "^1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
